2012-10-24  Zeno Albisser  <zeno@webkit.org>

        Implement GraphicsSurface for Windows.
        https://bugs.webkit.org/show_bug.cgi?id=98147

        Reviewed by Kenneth Rohde Christiansen.

        * qmake/mkspecs/features/features.prf:
                Activate GraphicsSurface on windows in case opengles2 (ANGLE)
                is available in QT_CONFIG.

2012-10-24  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [EFL][WK2] fast/repaint/delete-into-nested-block.html and fast/repaint/4776765.html are flaky
        https://bugs.webkit.org/show_bug.cgi?id=100010

        Reviewed by Kenneth Rohde Christiansen.

        Force the main view to receive focus even if Evas already
        considers it to be focused.

        It might happen that a different frame is focused by a page and
        the focus change notification does not reach Evas. When another
        test is run, the main frame is then not considered to be focused
        by WebCore, and things such as focus rings are not drawn as
        expected.

        * WebKitTestRunner/efl/PlatformWebViewEfl.cpp:
        (WTR::PlatformWebView::focus):

2012-10-24  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r132333.
        http://trac.webkit.org/changeset/132333
        https://bugs.webkit.org/show_bug.cgi?id=100234

        Crashes many tests on the EFL-WK2 bot. (Requested by rakuco on
        #webkit).

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetStateToConsistentValues):
        * WebKitTestRunner/efl/TestControllerEfl.cpp:
        (WTR::TestController::platformInitializeContext):

2012-10-24  Dongwoo Joshua Im  <dw.im@samsung.com>

        [GTK] Fix build break - undefined reference to 'gtk_init'
        https://bugs.webkit.org/show_bug.cgi?id=100221

        Unreviewed build fix.

        GTK_LIBS is needed for TestWTF.

        * TestWebKitAPI/GNUmakefile.am:
