@@ -1,3 +1,10 @@
+2012-10-24  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix the GTK+ build.
+
+        * TestWebKitAPI/GNUmakefile.am: Add GTK_FLAGS to
+        libTestWebKitAPIMain and webcore cflags to TestGtk.
+
 2012-10-24  Zeno Albisser  <zeno@webkit.org>
 
         Implement GraphicsSurface for Windows.
